feat: treinando streams